--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -2,12 +2,21 @@ $colours: (
   greybg: #e5e5e5,
   greycard: #e2e2e2,
   greynav: #8d8d8d,
-  greytitle: #6a6a6a,
+  greytitle: #463f3a,
   beige: #f4f3ee,
   white: #ffffff,
   pink: #c32c72,
 );
 
+$fonts: (
+  main: "Open Sans",
+  second: "Archivo Narrow",
+);
+
 @function getColour($colour) {
   @return map-get($colours, $colour);
+}
+
+@function getFont($font) {
+  @return map-get($fonts, $font);
 }
